# Gnome-Webradio

./: .gitignore  CHANGELOG.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  NEW_FEATURES.md  NEW_FEATURES_PHASE2.md  PKGBUILD  README.md  REFACTORING_PHASE2.md  REFACTORING_PHASE3.md  REFACTORING_PHASE4.md  SUMMARY_ALL_PHASES.md  YOUTUBE_RECORDING_FIX.md  build-rpm.sh  install-gsettings-schema.sh  pyproject.toml  refactor_window.py  requirements.txt  setup.py  test_improvements.sh  webradio-start.sh  webradio.spec
data/: org.webradio.Player.appdata.xml  org.webradio.Player.desktop  org.webradio.Player.gschema.xml  webradio.css
debian/: changelog  control  copyright  rules
src/webradio/: __init__.py  application.py  equalizer.py  exceptions.py  export_import.py  favorites.py  history.py  i18n.py  inhibitor.py  keyboard_shortcuts.py  logger.py  main.py  mpris.py  music_library.py  notifications.py  player.py  player_advanced.py  player_factory.py  player_legacy.py  playlist_manager.py  preferences.py  radio_api.py  recorder.py  session_manager.py  sleep_timer.py  spectrum.py  tray_icon.py  tray_icon_new.py  window.py  window.py.backup  window_simple.py  youtube_music.py
src/webradio/ui/: __init__.py
src/webradio/ui/components/: __init__.py  player_bar.py  station_row.py
src/webradio/ui/pages/: __init__.py  discover_page.py  favorites_page.py  history_page.py  youtube_page.py
tests/: __init__.py  run_tests.sh
tests/unit/: __init__.py  test_equalizer.py  test_exceptions.py  test_export_import.py  test_favorites.py  test_keyboard_shortcuts.py  test_logger.py  test_pages.py  test_player_factory.py  test_playlist_manager.py  test_recorder.py
